# libperl-rs

./: .travis.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  podman-build.zsh  publish.tcl  release.toml  runtest-docker.zsh
.github/workflows/: rust.yml
docs/plan/: README.md  appendix-rust-proc-macro-limits.md
examples/: 000_perl_parse.rs  001_perl_parse_args.rs  100_scan_ops.rs  101_scan_ops_debug.rs  102_padname_type.rs  103_scan_op_tree.rs  104_enum_op_tree.rs  105_scan_stash.rs  106_scan_allpackage.rs  107_scan_subs_in_a_file.rs  108_scan_subs_in_a_file2.rs  109_scan_subs_intro1.rs  110_call_method.rs  110_call_pv.rs  110_call_sv.rs  perl_version.rs  scan_ops.rs
examples/eg/: av0.rs  cv0.rs  gv0.rs  hv0.rs  hv_iter0.rs  mod.rs  op0.rs  op1.rs  op_walker1.rs  pad0.rs  stash_walker0.rs  sv0.rs
examples/examutil/: mod.rs
libperl-config/: Cargo.toml  README.md
libperl-config/examples/: emit_cfg.rs
libperl-config/src/: lib.rs  perl_command.rs  perl_config.rs  process_util.rs
libperl-macros/: Cargo.toml  README.md  build.rs
libperl-macros/src/: lib.rs  xs_boot.rs  xs_sub.rs
libperl-proto0/: Cargo.toml  build.rs
libperl-proto0/examples/: 000_perl_parse.rs  001_perl_parse_args.rs  100_scan_ops.rs  101_scan_ops_debug.rs  102_padname_type.rs  103_scan_op_tree.rs  104_enum_op_tree.rs  105_scan_stash.rs  106_scan_allpackage.rs  107_scan_subs_in_a_file.rs  108_scan_subs_in_a_file2.rs  109_scan_subs_intro1.rs  110_call_method.rs
libperl-proto0/examples/eg/: cv0.rs  hek0.rs  hv0.rs  hv_iter0.rs  op0.rs  op1.rs  pad0.rs  stash_walker0.rs
libperl-proto0/src/: lib.rs
libperl-proto0/tests/: parse_errors.rs
libperl-sys/: Cargo.toml  README.md  build.rs  skip-codegen.txt  wrapper.h  xs-wrapper.h
libperl-sys/src/: bindings.patch  conv_opcode.rs  lib.rs  perl_core.rs  sigdb.rs
src/: av.rs  cv.rs  hv.rs  lib.rs  perl.rs  rv.rs  sv.rs
tests/: perlvar_macros.rs  thx_attribute.rs
xs-demo-mytest/: Cargo.toml  Makefile  README.md
xs-demo-mytest/perllib/: Mytest.pm
xs-demo-mytest/src/: lib.rs
xs-demo-mytest/t/: 01_is_even.t  02_round.t
xs-demo-mytest/tests/: perl_smoke.rs
xs-demo-mytest2/: Cargo.toml  Makefile  README.md  build.rs
xs-demo-mytest2/perllib/: Mytest2.pm
xs-demo-mytest2/src/: lib.rs
xs-demo-mytest2/t/: 01_foo.t  02_statfs.t  03_raw_sv.t  04_sv_newtype.t  05_perl_ctx.t  06_av_hv.t  07_av_hv_in.t  08_multi_statfs.t  09_cv.t
xs-demo-mytest2/tests/: perl_smoke.rs
