[package]
name = "libperl-rs"
version = "0.2.0"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
edition = "2018"
description = "Embed perl5 runtime in Rust"

repository = "https://github.com/hkoba/libperl-rs.git"

keywords = ["perl"]

license = "GPL-1.0-or-later OR Artistic-1.0-Perl"

[workspace]
members = ["libperl-sys", "libperl-config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "hkoba/libperl-rs", branch = "master" }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]

libperl-sys = { "path" = "./libperl-sys", version = "^0.2"}
typed-arena = "1.2.0"
if_chain = "1.0"

[build-dependencies]
regex = "1"

libperl-config = {"path" = "./libperl-config", version = "^0.2"}
