[package]
name = "libperl-rs"
version = "0.4.0-alpha.1"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
edition = "2024"
description = "Embed perl5 runtime in Rust"

repository = "https://github.com/hkoba/libperl-rs.git"

keywords = ["perl"]

license = "GPL-1.0-or-later OR Artistic-1.0-Perl"

[workspace]
members = ["libperl-sys", "libperl-config", "libperl-proto0", "libperl-macros", "xs-demo-mytest", "xs-demo-mytest2"]

[badges]
travis-ci = { repository = "hkoba/libperl-rs", branch = "master" }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libperl-sys = { path = "./libperl-sys", version = "^0.3.1" }
libperl-macros = { path = "./libperl-macros", version = "^0.4.0-alpha.1" }

[build-dependencies]
libperl-config = { path = "./libperl-config", version = "^0.3.1" }
