[package]
name = "libperl-config"
version = "0.3.2"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Extract perl's build configs from Config.pm and others"

repository = "https://github.com/hkoba/libperl-rs.git"
documentation = "https://docs.rs/libperl-config"
readme = "README.md"

keywords = ["perl", "perl5", "config", "build", "ffi"]
categories = ["development-tools::build-utils", "config"]

license = "GPL-1.0-or-later OR Artistic-1.0-Perl"

[package.metadata.release]
disable-tag = true
disable-push = true

[dependencies]
chrono = "0.4.42"
regex = "1"
