[package]
name = "libperl-sys"
version = "0.1.0"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
edition = "2018"

links = "perl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]

[build-dependencies]
bindgen = "0.44"
regex = "1"
