[package]
name = "libperl-sys"
version = "0.4.0-alpha.6"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
edition = "2024"
description = "Low-level FFI declarations for libperl (Perl5), generated via bindgen + libperl-macrogen"

repository = "https://github.com/hkoba/libperl-rs.git"
documentation = "https://docs.rs/libperl-sys"
readme = "README.md"

keywords = ["perl", "perl5", "ffi", "bindings", "bindgen"]
categories = ["external-ffi-bindings"]

license = "GPL-1.0-or-later OR Artistic-1.0-Perl"

links = "perl"

[package.metadata.release]
disable-tag = true
disable-push = true

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
libc = "0.2.182"
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
bindgen = "0.72.1"
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
phf_codegen = "0.11"

libperl-config = { path = "../libperl-config", version = "^0.3.2" }
libperl-macrogen = { version = "0.1.4" }
